# web3-edu-platform-core

./: .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  Makefile  README.md  bazel-bin  bazel-out  bazel-testlogs  bazel-web3-edu-platform-core
.github/workflows/: ci.yml
agent-assist-py/: context.py  main.py  requirements.txt  tutor.py
api-gateway-go/: .gazelle.yaml  go.mod
api-gateway-go/cmd/gateway/: BUILD.bazel  main.go
api-gateway-go/config/: plugins.registry.json
api-gateway-go/internal/plugins/: BUILD.bazel  registry.go
api-gateway-go/internal/security/: BUILD.bazel  mainnet.go
ci/: bazel-gate.sh  ci-gate.sh  core-version-check.sh  e2e-smoke.sh  integration-all-plugins.sh  labweave-assist-smoke.sh  labweave-path-check.sh  register-plugins.py  tutorial-audit.sh
ci/compliance/: compliance-check.sh  validate-plugin.sh
ci/lib/: stack-common.sh
control-plane-go/: .gazelle.yaml  go.mod  go.sum
control-plane-go/cmd/container-manager/: BUILD.bazel  main.go
control-plane-go/cmd/scheduler/: BUILD.bazel  main.go
control-plane-go/config/: plugins.registry.json
control-plane-go/internal/containermanager/: BUILD.bazel  manager.go  resolver.go  resolver_test.go
control-plane-go/internal/jobsubmit/: BUILD.bazel  diagnostics.go  k8s.go  logs.go  submit.go  template.go  template_test.go
control-plane-go/internal/netutil/: listen.go
control-plane-go/internal/plugins/: BUILD.bazel  registry.go
control-plane-go/internal/scheduler/: BUILD.bazel  scheduler.go  v02.go  v03.go  v04.go
control-plane-go/internal/toolchain/: BUILD.bazel  manifest.go
deploy/: 01-local-dev.md  02-local-prod-verify.md  03-k8s-jobs.md  04-cloud-vps.md  06-operations.md  README.md
deploy/checklists/: post-deploy-smoke.md  pre-cloud-launch.md
deploy/cloud/: generic-vps.md
deploy/diagrams/: architecture.mmd  local-vs-cloud.mmd  request-flow.mmd
deploy/env/: labweave.cloud-k8s.env.example  labweave.local.env.example  labweave.prod.env.example
deploy/lib/: common.sh
deploy/nginx/: labweave-http-only.conf.example  labweave.conf.example
deploy/scripts/: cloud-bootstrap.sh  cloud-deploy.sh  install-systemd.sh  k8s-apply-base.sh  labweave-prod-build.sh  labweave-prod-down.sh  labweave-prod-up.sh  nginx-install.sh  verify-cloud.sh  verify-local-full.sh  verify-local.sh
deploy/systemd/: labweave-agent-assist.service  labweave-container-manager.service  labweave-gateway.service  labweave-rule-engine.service  labweave-scheduler.service
docs/: AGENT0_TASK.md  AGENT_CONTRACT.md  COMPLIANCE.md  CORE_TASK.md  DEV.md  LABWEAVE.md  LABWEAVE_PATH.md  LABWEAVE_RELEASE.md  LEARNING_PATH.md  PLUGIN_CONTRACT.md  QUICK_DEPLOY.md
examples/: mock-plugin.manifest.yaml  sample-plugin.manifest.yaml
examples/plugins/mock/frontend/: MockLab.vue  plugin.ts
frontend-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-web/src/: App.vue  main.ts  shims-sandbox.d.ts  styles.css
frontend-web/src/assets/: lab-sandbox-theme.css
frontend-web/src/components/: ComplianceBadge.vue  LabAssistDrawer.vue  LabKnowledgePanel.vue  LabQuiz.vue  LanguageSwitcher.vue  LearnStepDetail.vue
frontend-web/src/composables/: useLabAssist.ts  useLabI18n.ts  useLabKnowledge.ts  useLabWeaveProgress.ts  useLocalizedPath.ts
frontend-web/src/data/: labweave-path.json
frontend-web/src/data/knowledge/: merge.ts  types.ts
frontend-web/src/data/knowledge/en-US/: core.ts  gov.ts  hot.ts  objectives-quiz.ts  sandbox.ts  trace.ts
frontend-web/src/data/knowledge/zh-CN/: core.ts  gov.ts  hot.ts  index.ts  objectives-quiz.ts  sandbox.ts  trace.ts
frontend-web/src/i18n/: index.ts
frontend-web/src/i18n/labs/: en-US.ts  zh-CN.ts
frontend-web/src/i18n/locales/: en-US.ts  zh-CN.ts
frontend-web/src/plugins/: lab-loaders.ts  loader.ts  plugins.registry.json  types.ts
frontend-web/src/router/: index.ts
frontend-web/src/views/: HomeView.vue  LabView.vue  LearnView.vue  PluginLabHost.vue
infra/bazel/: README.md
k8s-manifests/base/: namespaces.yaml  testnet-rpc-configmap.yaml  testnet-rpc-configmaps.yaml
rule-engine-py/: main.py  requirements.txt
rule-engine-py/plugins/: registry.py
rule-engine-py/plugins/rules/: mock_evaluator.py
schemas/: allowed-chain-ids.yaml  plugin.manifest.schema.json  task-types.yaml
scripts/: bazel-bootstrap.sh  bazel-smoke.sh  container-manager-smoke.sh  fabric-sandbox-bootstrap.sh  k8s-job-smoke.sh  k8s-multilang-smoke.sh  k8s-smoke-all.sh  k8s-smoke-common.sh  labweave-doctor.sh  labweave-down.sh  labweave-up.sh  release-check.sh  scheduler-resolver-smoke.sh
