load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gateway_lib",
    srcs = ["main.go"],
    importpath = "github.com/web3edu/platform-core/api-gateway-go/cmd/gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//api-gateway-go/internal/plugins",
        "//api-gateway-go/internal/security",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "gateway",
    embed = [":gateway_lib"],
    visibility = ["//visibility:public"],
)
