load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jobsubmit",
    srcs = [
        "diagnostics.go",
        "k8s.go",
        "logs.go",
        "submit.go",
        "template.go",
    ],
    importpath = "github.com/web3edu/platform-core/control-plane/internal/jobsubmit",
    visibility = ["//control-plane-go:__subpackages__"],
    deps = [
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/clientcmd",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)

go_test(
    name = "jobsubmit_test",
    srcs = ["template_test.go"],
    embed = [":jobsubmit"],
    deps = ["@io_k8s_api//core/v1:core"],
)
